fix gap

--- a/src/components/developer/Developer.module.scss
+++ b/src/components/developer/Developer.module.scss
@@ -45,13 +45,14 @@
       padding: 24px;
       background-color: $grey5;
       display: flex;
-      gap: 12px;
+      gap: 8px;
       align-items: center;
       color: $grey1;
       @include text;
       @include letterMore;
 
       @include lg {
+        gap: 4px;
         justify-content: center;
         padding: 16px;
         font-size: 15px;
